# auto_EVO-COLMAP

./: README.md
EuRoc/Results/MH_04_difficult/: KeyFrameTrajectory9.txt  Results.txt  time.txt
EuRoc/Results/MH_05_difficult/: KeyFrameTrajectory1.txt  KeyFrameTrajectory2.txt
EuRoc/Results/V1_02_medium/: KeyFrameTrajectory6.txt  KeyFrameTrajectory7.txt
EuRoc/Results/V1_03_difficult/: KeyFrameTrajectory1.txt
EuRoc/Results/V2_01_easy/: KeyFrameTrajectory9.txt
EuRoc/Results/V2_02_medium/: KeyFrameTrajectory7.txt  time.txt
EuRoc/Results/V2_03_difficult/: KeyFrameTrajectory8.txt  Results.txt
ICL-NUIM/: CMakeLists.txt  prepare
ICL-NUIM/Results/living_room_traj0_frei_png/: KeyFrameTrajectory4.txt  KeyFrameTrajectory9.txt  Results.txt
ICL-NUIM/Results/living_room_traj1_frei_png/: KeyFrameTrajectory2.txt  KeyFrameTrajectory3.txt  KeyFrameTrajectory8.txt  Results.txt  time.txt
ICL-NUIM/Results/living_room_traj2_frei_png/: KeyFrameTrajectory4.txt  KeyFrameTrajectory6.txt  KeyFrameTrajectory7.txt
ICL-NUIM/Results/living_room_traj3_frei_png/: KeyFrameTrajectory5.txt
ICL-NUIM/Results/traj0_frei_png/: KeyFrameTrajectory4.txt
ICL-NUIM/Results/traj1_frei_png/: KeyFrameTrajectory2.txt  KeyFrameTrajectory9.txt
ICL-NUIM/Results/traj3_frei_png/: KeyFrameTrajectory8.txt
Tum/: evo_Tum.py
Tum/Results/rgbd_dataset_freiburg1_room/: KeyFrameTrajectory2.txt  KeyFrameTrajectory8.txt
Tum/Results/rgbd_dataset_freiburg2_360_kidnap/: KeyFrameTrajectory3.txt  KeyFrameTrajectory8.txt
Tum/Results/rgbd_dataset_freiburg2_desk/: KeyFrameTrajectory10.txt  KeyFrameTrajectory8.txt
Tum/src/: convertor.cc
auto_EVO-COLMAP/EuRoc/: CMakeLists.txt  evo_EuRoc.py
auto_EVO-COLMAP/ICL-NUIM/: Results.txt  evo_ICL-NUIM.py
auto_EVO-COLMAP/Tum/: CMakeLists.txt  evo_Tum.py
auto_EVO-COLMAP_SFM/EuRoc/: evo_EuRoc.py
auto_EVO-COLMAP_SFM/ICL-NUIM/: evo_ICL-NUIM.py
auto_EVO-COLMAP_SFM/Tum/: evo_Tum.py
auto_EVO-colmap_sfm/Tum/: evo_Tum.py
colmap/src/util/: version.h
(+333 files in other folders)
